test-cases/negative/test_151_invalid_string_concatenation.lay
# negative test: invalid string concatenation syntax
# expected: parser should reject this or type checker should catch

the variable x of type String is 'hello' concatenated with 'world'


